# swiggy_delivery_time_prediction

./: .gitignore  LICENSE  Makefile  README.md  app.py  dvc.yaml  params.yaml  pyproject.toml  requirements-dockers.txt  requirements.txt
.github/workflows/: ci_cd.yaml
data/: raw.dvc
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 01_Data_Cleaning.ipynb  03_Baseline_Model.ipynb  04_Exp 1 drop vs impute.ipynb  05_Exp 2 missing indicator.ipynb  06_Model Selection.ipynb  07_RF HP Tuning.ipynb  08_LGBM HP Tuning.ipynb  09_Stacking Regressor HP Tuning.ipynb  10_Final Estimator.ipynb
src/data/: data_cleaning.py  data_preparation.py
src/features/: data_preprocessing.py
src/models/: evaluation.py  register_model.py  train.py
src/utils/: data_clean_utils.py  data_clean_utils_prod.py  promote_model_to_prod.py  sample_predictions.py
tests/: test_model_perf.py  test_model_registry.py
